Fix typos in hero section and footer; update form action URLs for contact and checkout forms; adjust product categories in script.js; add README for Messenger Product Automation and FormSubmit integration.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="hero-wrap">
                         <div class="hero-card">
                             <h1>HAYATIQ</h1>
-                            <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals, gentle, mindful, and designed to nurture over time, because true wellness a lifestyle, not a rush.</p>
+                            <p class="muted">Handcrafted with intention. Natural wellness products for your everyday rituals, gentle, mindful, and designed to nurture over time, because true wellness is a lifestyle, not a rush.</p>
                             <div class="hero-cta">
                                 <a href="#/products" class="btn button-primary">Discover our products</a>
                             </div>
@@ -175,7 +175,7 @@
                         <h2>Contact Us</h2>
                         <a class="btn button-ghost" href="https://facebook.com/hayatiq.life" target="_blank" rel="noopener">Facebook Page →</a>
                     </div>
-                    <form action="https://formsubmit.co/el/vevigu" class="contact" method="POST" id="contactForm">
+                    <form action="https://formsubmit.co/hayatiq.life@gmail.com" class="contact" method="POST" id="contactForm">
                         <input type="hidden" name="_captcha" value="true">
                         <input type="hidden" name="_template" value="table">
                         <input type="text" name="_honey" style="display:none">
@@ -213,7 +213,7 @@
             <section id="view-checkout" class="view" aria-label="Checkout">
                 <div class="soft-card">
                     <h2>Checkout</h2>
-                    <form action="https://formsubmit.co/el/vevigu" method="POST" id="checkoutForm" class="checkout-form">
+                    <form action="https://formsubmit.co/hayatiq.life@gmail.com" method="POST" id="checkoutForm" class="checkout-form">
                         <input type="hidden" name="_captcha" value="true">
                         <input type="hidden" name="_template" value="table">
                         <input type="text" name="_honey" style="display:none">
@@ -319,7 +319,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container" style="padding-bottom:1rem;font-size:.85rem;text-align:center">© <span id="year"></span> HAYATIQ. All rights reserved. Handcrafted with intention. </div>
+            <div class="container" style="padding-bottom:1rem;font-size:.85rem;text-align:center">© <span id="year"></span> HAYATIQ. All rights reserved. Handcrafted with Intention. </div>
         </footer>
         <script src="./js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -347,7 +347,7 @@
                     return;
                 }
                 // === Send via FormSubmit AJAX ===
-                axios.post("https://formsubmit.co/ajax/a921e9769ea9d4556fa8dcbd854fad0a", new FormData(form)).then((response) => {
+                axios.post("https://formsubmit.co/ajax/hayatiq.life@gmail.com", new FormData(form)).then((response) => {
                     // Record submission timestamp
                     submissions.push(now);
                     localStorage.setItem(limitKey, JSON.stringify(submissions));
@@ -402,7 +402,7 @@
                     return;
                 }
                 
-                axios.post("https://formsubmit.co/ajax/a921e9769ea9d4556fa8dcbd854fad0a", new FormData(form)).then((response) => {
+                axios.post("https://formsubmit.co/ajax/hayatiq.life@gmail.com", new FormData(form)).then((response) => {
                     // Save form data for next time
                     saveFormData();
                     // Record order timestamp
