visitor summary updated also added seo meta data

--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <!-- SEO Meta Tags -->
+        <meta name="description" content="Hayatiq - Handcrafted natural wellness products. Premium magnesium oil, organic soaps, hair care serums, and skincare products made with intention in Bangladesh.">
+        <meta name="keywords" content="natural products, wellness, magnesium oil, organic soap, hair care, skincare, Bangladesh, handmade, natural remedies, magnesium oil spray, magnesium oil price in bd">
+        <meta name="author" content="Hayatiq">
+
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="Hayatiq - Handcrafted Natural Wellness Products">
+        <meta property="og:description" content="Premium handmade natural products for your everyday wellness rituals. Magnesium oil, organic soaps, hair care & skincare.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://hayatiq.netlify.app">
+        <meta property="og:image" content="./images/logo.jpg">
+
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Hayatiq - Natural Wellness Products">
+        <meta name="twitter:description" content="Handcrafted natural products for mindful living">
+
+        <!-- Additional SEO -->
+        <meta name="robots" content="index, follow">
+        <meta name="language" content="English">
+        <meta name="geo.region" content="BD">
+        <meta name="geo.placename" content="Bangladesh">
+
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://hayatiq.netlify.app">
         <title>Hayatiq — Handcrafted with Intention</title>
         <meta name="description" content="Hayatiq — Handmade beauty products with a calming, premium aesthetic.">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -304,7 +329,7 @@
                 <div class="footer-col">
                     <strong>Social</strong>
                     <div class="socials" style="margin-top:.4rem">
-                        <a href="https://instagram.com/hayatiqlife" target="_blank" aria-label="Instagram" rel="noopener">
+                        <a href="https://instagram.com/hayatiq.life" target="_blank" aria-label="Instagram" rel="noopener">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.5" />
                                 <circle cx="12" cy="12" r="4.5" stroke="currentColor" stroke-width="1.5" />
@@ -333,5 +358,6 @@
         <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1392536/t/4"></script>
         <!-- after page load -->
         <script src="./js/partial.js"></script>
+        <script src="./js/visitor.js"></script>
     </body>
 </html>
