added deep-muted class for improved text visibility and updated checkout alert message

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             </div>
             <div class="container" style="padding-bottom:1rem;font-size:.85rem;text-align:center">© <span id="year"></span> HAYATIQ. All rights reserved. Handcrafted with Intention. </div>
         </footer>
-        <a href='https://www.free-counters.org/'>Stat</a> 
+        <a href='https://www.free-counters.org/'> .</a> 
         <script src="./js/visitor.js"></script>
         <script src="./js/script.js"></script>
         <!-- sweetalert -->
